--- a/demo/index.html
+++ b/demo/index.html
@@ -31,15 +31,6 @@
 
 <h2>Options</h2>
 <div class="option">
-    <input id="use-datachannel" checked="checked" type="checkbox"/>
-    <label for="use-datachannel">Use datachannel</label>
-    <select id="datachannel-parameters">
-        <option value='{"ordered": true}'>Ordered, reliable</option>
-        <option value='{"ordered": false, "maxRetransmits": 0}'>Unordered, no retransmissions</option>
-        <option value='{"ordered": false, "maxPacketLifetime": 500}'>Unordered, 500ms lifetime</option>
-    </select>
-</div>
-<div class="option">
     <input id="use-audio" checked="checked" type="checkbox"/>
     <label for="use-audio">Use audio</label>
     <select id="audio-input">
@@ -48,14 +39,10 @@
 </div>
 <div class="option">
     <input id="use-video" type="checkbox"/>
-    <label for="use-video">Use video (TODO)</label>
+    <label for="use-video">Use video</label>
     <select id="video-input">
         <option value="" selected>Default device</option>
     </select>
-</div>
-<div class="option">
-    <input id="use-stun" type="checkbox"/>
-    <label for="use-stun">Use STUN server</label>
 </div>
 
 <button id="start" onclick="start()">Start</button>
@@ -63,13 +50,7 @@
 
 <h2>State</h2>
 <p>
-    ICE gathering state: <span id="ice-gathering-state"></span>
-</p>
-<p>
-    ICE connection state: <span id="ice-connection-state"></span>
-</p>
-<p>
-    Signaling state: <span id="signaling-state"></span>
+    Connection state: <span id="ice-connection-state"></span>
 </p>
 
 <div id="media" style="display: none">
@@ -81,14 +62,6 @@
 
 <h2>Data channel</h2>
 <pre id="data-channel" style="height: 200px;"></pre>
-
-<h2>SDP</h2>
-
-<h3>Offer</h3>
-<pre id="offer-sdp"></pre>
-
-<h3>Answer</h3>
-<pre id="answer-sdp"></pre>
 
 <script src="client.js"></script>
 </body>
