--- a/demo/index.html
+++ b/demo/index.html
@@ -14,10 +14,6 @@
         overflow-y: auto;
     }
 
-    video {
-        width: 100%;
-    }
-
     .option {
         margin-bottom: 8px;
     }
@@ -45,8 +41,8 @@
     </select>
 </div>
 
-<button id="start" onclick="start()">Start</button>
-<button id="stop" style="display: none" onclick="stop()">Stop</button>
+<button id="start" onclick="start().catch(alert)">Start</button>
+<button id="stop" style="display: none" onclick="stop().catch(alert)">Stop</button>
 
 <h2>State</h2>
 <p>
@@ -57,7 +53,7 @@
     <h2>Media</h2>
 
     <audio id="audio" autoplay="true"></audio>
-    <video id="video" autoplay="true" playsinline="true"></video>
+    <video id="video" autoplay="true" playsinline="true" muted="true"></video>
 </div>
 
 <h2>Data channel</h2>
