Add multi model support and include gpt-4o in addition to gemini

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,6 +27,13 @@
 
 <h2>Options</h2>
 <div class="option">
+    <label for="model">Model</label>
+    <select id="model">
+        <option value="gemini" selected>Gemini</option>
+        <option value="openai">GPT-4o</option>
+    </select>
+</div>
+<div class="option">
     <input id="use-audio" checked="checked" type="checkbox"/>
     <label for="use-audio">Use audio</label>
     <select id="audio-input">
